[package]
name = "videotoolbox-rs"
description = "Rust wrapper for apple's VideoToolbox framework"
keywords = ["video", "videotoolbox", "encode", "decode", "macos"]
version = "0.1.0"
edition = "2021"
authors = ["Per Johansson <per@doom.fisn>"]
repository = "https://github.com/doom-fish/core-frameworks"
homepage = "https://doom.fish"
license = "MIT OR Apache-2.0"

[dependencies]
core-foundation = "0.10.0"
core-media-rs = "0.3"
thiserror = "2"
